# aerialSLAM

./: .gitignore  CMakeLists.txt  DynamicFactorGraph.cpp  DynamicFactorGraph.h  README.md  featuredpa.cpp  featuredpa.h  main.cpp  plotTF.py
Matlab_feature_detection_and_matching/: array_opt.m  array_test.m  feature_frame_matching.m  feature_image_and_frame_match.m  feature_match_test.m  genIMUFactors.m  getFeaturesBetweenFrames.m  getFrameTF.m  getStereoFeatures.m  stereo_frame_features.m  triangulation.m
Matlab_feature_detection_and_matching/eugene_test/: doGTSAM.m  eugene_test.asv  eugene_test.m  genIMUFactors.m
datasets/: README.md  body_accel.csv  body_angvel.csv  fakeInitialPoses.txt  fakeLandmarks.txt  image_timestamps.csv  imu_timestamps.csv
